# Reader

./: Cargo.toml  README.md
src/: cmd.rs  gap_vec.rs  main.rs  settings.rs
src/decoders/: jpeg.rs  mod.rs  png.rs
src/img_sources/: empty.rs  image_directory.rs  mod.rs  zip_file.rs
src/sources/: empty.rs  image_directory.rs  mod.rs  zip_file.rs
src/ui/: app.rs  mod.rs
