[package]
name = "reader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
eframe = { version = "0.22.0", default-features = false, features = [
    "glow",
    "persistence",
    "ron",
] }
egui = "0.22.0"
num_cpus = "1.16.0"
once_cell = "1.18.0"
rfd = "0.11.4"
serde = { version = "1.0.183", features = ["derive"] }
zune-png = "0.2.1"
zune-jpeg = "0.3.17"
zip_next = { version = "0.10.3", default-features = false, features = ["deflate"] }
